--- a/index.html
+++ b/index.html
@@ -2,36 +2,36 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0">
+	<meta content="yes" name="apple-mobile-web-app-capable">
+	<meta content="black" name="apple-mobile-web-app-status-bar-style">
+	<meta content="telephone=no" name="format-detection">
+	<meta content="email=no" name="format-detection">
+	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./css/main.css">
 	<title>留言板</title>
+
 </head>
 <body>
+<header>
+	<img src="./img/head-bg.jpg" alt="背景图">
+</header>
 
 	<div class="container">
-		<div class="message-list">
-			<div class="message-item">
-				<div class="message-content">新年快乐哦！</div>
-				<div class="message-details"><span class="name">可欣</span><span class="time">2017.1.1</span></div>
 
-			</div>
-			<div class="message-item">
-				<div class="message-content">新年快乐哦！</div>
-				<div class="message-details"><span class="name">可欣</span><span class="time">2017.1.1</span></div>
-
-			</div>
-			<div class="message-item">
-				<div class="message-content">新年快乐哦！</div>
-				<div class="message-details"><span class="name">可欣</span><span class="time">2017.1.1</span></div>
-
-			</div>
+		<div id="messageList">
 		</div>
 
 		<div class="message-add">
-			<textarea id="messageContent" cols="30" rows="10" placeholder="留言区" ></textarea>
-			<input id="name" type="text" placeholder="尊姓大名" />
-			<button id="submit">提交</button>
+			<textarea id="messageContent" cols="30" rows="2" placeholder="留言区" ></textarea>
+			<input id="name" type="text" placeholder="你的名字" />
+			<button id="submit">留言</button>
 		</div>
 	</div>
-	<script type="text/javascript" src='./js/ajax.js'></script>
-	 <script src='./js/main.js'></script>
+
+	<audio id="audio" src="./audio/music.mp3" id="audio" autoplay="true" loop preload>
+	</audio>
+	<script type="text/javascript" src="./js/ajax.js"></script>
+	<script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
